--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body{
 .container {
   width: 100%;
   height: 100vh;
+  background-image: url('bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .topBar {
@@ -25,7 +28,6 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid red; */
 }
 
 .topBar a {
