--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@
   box-sizing: border-box;
   font-family: "Josefin Sans", sans-serif;
 }
+
 :root {
   --neon-text-color: #B7C9F2;
 }
-body{
+
+body {
   background-color: #30303A;
 }
 
@@ -40,6 +42,7 @@ body{
   border-radius: 0.3rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
 .center {
   /* border: 1px solid #000; */
   width: 100%;
@@ -49,6 +52,7 @@ body{
   align-items: center;
   text-align: center;
 }
+
 .right {
   width: 100%;
   height: 100%;
@@ -61,39 +65,46 @@ body{
   border-radius: 50%;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+
 .right .box p {
   font-size: 2rem;
-color: #fff;
-margin-top: 20px;
-font-family: "Pacifico", cursive;
-text-shadow: 0 0 0 transparent,
-              0 0 10px #176D8B,
-              0 0 20px #176D8B,
-              0 0 30px #176D8B,
-              0 0 40px #176D8B,
-              0 0 50px #176D8B,
-              0 0 60px #176D8B,
-              0 0 80px #176D8B,
-              0 0 100px #176D8B;
-animation: animate 3s infinite alternate;
+  color: #fff;
+  margin-top: 20px;
+  font-family: "Pacifico", cursive;
+  text-shadow: 0 0 0 transparent,
+    0 0 10px #176D8B,
+    0 0 20px #176D8B,
+    0 0 30px #176D8B,
+    0 0 40px #176D8B,
+    0 0 50px #176D8B,
+    0 0 60px #176D8B,
+    0 0 80px #176D8B,
+    0 0 100px #176D8B;
+  animation: animate 3s infinite alternate;
 }
+
 @keyframes animate {
-40% {
-  opacity: 1;
+  40% {
+    opacity: 1;
+  }
+
+  42% {
+    opacity: 0.8;
+  }
+
+  43% {
+    opacity: 1;
+  }
+
+  45% {
+    opacity: 0.3;
+  }
+
+  46% {
+    opacity: 1;
+  }
 }
-42% {
-  opacity: 0.8;
-}
-43% {
-  opacity: 1;
-}
-45% {
-  opacity: 0.3;
-}
-46% {
-  opacity: 1;
-}
-}
+
 .social-buttons {
   border-radius: 5px;
   display: flex;
@@ -101,9 +112,11 @@ animation: animate 3s infinite alternate;
   justify-content: center;
   margin-top: 10px;
 }
+
 .social-buttons__button {
   margin: 5px;
 }
+
 .social-button {
   border-radius: 50%;
   position: relative;
@@ -115,9 +128,11 @@ animation: animate 3s infinite alternate;
   height: 45px;
   text-decoration: none;
 }
+
 .social-icons {
   width: 100%;
 }
+
 .social-button__inner {
   font-size: 2.3rem;
   position: relative;
@@ -130,19 +145,23 @@ animation: animate 3s infinite alternate;
   background: #fff;
   text-align: center;
 }
+
 .social-button i,
 .social-button svg {
   position: relative;
   z-index: 1;
   transition: 0.3s;
 }
+
 .social-button i {
   font-size: 28px;
 }
+
 .social-button svg {
   height: 40%;
   width: 40%;
 }
+
 .social-button::after {
   content: "";
   position: absolute;
@@ -154,11 +173,13 @@ animation: animate 3s infinite alternate;
   border-radius: 100%;
   transition: 0.3s;
 }
+
 .social-button:focus,
 .social-button:hover {
   color: #fff;
   text-decoration: none;
 }
+
 .social-button:focus::after,
 .social-button:hover::after {
   width: 100%;
@@ -169,24 +190,31 @@ animation: animate 3s infinite alternate;
 .social-button--facebook {
   color: #CD201F;
 }
+
 .social-button--facebook::after {
   background: #CD201F;
 }
+
 .social-button--linkedin {
   color: #0077b5;
 }
+
 .social-button--linkedin::after {
   background: #0077b5;
 }
+
 .social-button--github {
   color: #6e5494;
 }
+
 .social-button--github::after {
   background: #6e5494;
 }
+
 .social-button--twitter {
   color: #212121;
 }
+
 .social-button--twitter::after {
   background: #212121;
 }
@@ -194,6 +222,7 @@ animation: animate 3s infinite alternate;
 .social-button--instagram {
   color: #e4405f;
 }
+
 .social-button--instagram::after {
   background: #e4405f;
 }
@@ -201,53 +230,77 @@ animation: animate 3s infinite alternate;
 .social-button--mail {
   color: #f2a60c;
 }
+
 .social-button--mail::after {
   background: #f2a60c;
 }
+
 .social-button--drive {
   color: #08851b;
 }
+
 .social-button--drive::after {
   background: #08851b;
 }
+
 .social-button--apnaCollege {
   color: #891652;
 }
+
 .social-button--apnaCollege::after {
   background: #891652;
 }
+
 .social-button--fiverr {
   color: #1DBF73;
 }
+
 .social-button--fiverr::after {
   background: #1DBF73;
 }
+
 .social-button--tailwind {
   color: #FC4100;
 }
+
 .social-button--tailwind::after {
   background: #FC4100;
 }
+
 .social-button--googlefonts {
   color: #FF204E;
 }
+
 .social-button--googlefonts::after {
   background: #FF204E;
 }
+
 .social-button--fontawesome {
   color: #41C9E2;
 }
+
 .social-button--fontawesome::after {
   background: #41C9E2;
 }
+
 .social-button--monkeytype {
   color: #C80036;
 }
+
 .social-button--monkeytype::after {
   background: #C80036;
 }
+
+.social-button--readme {
+  color: #1A5319;
+}
+
+.social-button--readme::after {
+  background: #1A5319;
+}
+
 /* search */
-.search{
+.search {
   width: 100%;
   height: 10vh;
   /* border: 1px solid red; */
@@ -255,20 +308,22 @@ animation: animate 3s infinite alternate;
   justify-content: center;
   align-items: center;
 }
-.search form{
+
+.search form {
   width: 450px;
   height: 50px;
   border-radius: 60px;
   display: flex;
   overflow: hidden;
   /* background-color: red; */
-  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(bg-search.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(bg-search.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-form input{
+
+form input {
   width: 85%;
   outline: none;
   padding-left: 20px;
@@ -277,23 +332,27 @@ form input{
   border: none;
   color: #fff;
 }
-::placeholder{
+
+::placeholder {
   color: #ffffff;
   opacity: 0.5;
 }
-form button{
+
+form button {
   width: 15%;
   background-color: transparent;
   outline: none;
   border: none;
   cursor: pointer;
 }
-form button i{
+
+form button i {
   color: #ffffff;
   font-size: 1.2rem;
 }
+
 /* search */
-.cards{
+.cards {
   width: 100%;
   height: 43vh;
   display: flex;
@@ -302,18 +361,22 @@ form button i{
   padding: 1% 25% 1% 25%;
   /* border: 1px solid red; */
 }
-.card-1{
+
+.card-1 {
   width: 49%;
   height: 100%;
 }
-.card-2{
+
+.card-2 {
   width: 49%;
   height: 100%;
 }
-.cards a{
+
+.cards a {
   text-decoration: none;
 }
-.card-inner{
+
+.card-inner {
   width: 100%;
   height: 22%;
   margin: 1.5% 0;
@@ -328,7 +391,8 @@ form button i{
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   /* border: 1px solid red; */
 }
-.card-inner:before{
+
+.card-inner:before {
   content: "";
   width: 100%;
   height: 100%;
@@ -336,65 +400,169 @@ form button i{
   top: 0%;
   left: -100%;
 }
-.card-inner .card-left{
+
+.card-inner .card-left {
   width: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.card-inner .card-left i{
+
+.card-inner .card-left i {
   font-size: 1.5rem;
   z-index: 99;
 }
-.card-inner .card-right{
+
+.card-inner .card-right {
   width: 80%;
   display: flex;
   flex-direction: column;
   align-items: start;
 }
-.card-inner h1{
+
+.card-inner h1 {
   font-size: 1.2rem;
   color: #000;
   font-weight: 400;
   z-index: 99;
 }
-.card-inner p{
+
+.card-inner p {
   font-size: 0.8rem;
   margin-top: 1.5%;
   color: #2f2f2f;
   font-weight: 300;
   z-index: 99;
 }
-.card-inner-1{color: #4F6F52;}
-.card-inner:hover .card-left i{color: #fff;transition: all 0.4s;}
-.card-inner:hover .card-right h1{color: #fff;transition: all 0.4s;}
-.card-inner:hover .card-right p{color: #fff;transition: all 0.4s;}
-.card-inner-1::before{background-color: #4F6F52;z-index: 1;transition: all 0.4s;}
-.card-inner-2{color: #FFD23F;}
-.card-inner-2::before{background-color: #FFD23F;z-index: 1;transition: all 0.4s;}
-.card-inner-3{color: #EE4266;}
-.card-inner-3::before{background-color: #EE4266;z-index: 1;transition: all 0.4s;}
-.card-inner-4{color: #FBA834;}
-.card-inner-4::before{background-color: #FBA834;z-index: 1;transition: all 0.4s;}
-.card-inner-5{color: #9195F6;}
-.card-inner-5::before{background-color: #9195F6;z-index: 1;transition: all 0.4s;}
-.card-inner-6{color: #FC6736;}
-.card-inner-6::before{background-color: #FC6736;z-index: 1;transition: all 0.4s;}
-.card-inner-7{color: #FF004D;}
-.card-inner-7::before{background-color: #FF004D;z-index: 1;transition: all 0.4s;}
-.card-inner-8{color: #FF90BC;}
-.card-inner-8::before{background-color: #FF90BC;z-index: 1;transition: all 0.4s;}
+
+.card-inner-1 {
+  color: #4F6F52;
+}
+
+.card-inner:hover .card-left i {
+  color: #fff;
+  transition: all 0.4s;
+}
+
+.card-inner:hover .card-right h1 {
+  color: #fff;
+  transition: all 0.4s;
+}
+
+.card-inner:hover .card-right p {
+  color: #fff;
+  transition: all 0.4s;
+}
+
+.card-inner-1::before {
+  background-color: #4F6F52;
+  z-index: 1;
+  transition: all 0.4s;
+}
+
+.card-inner-2 {
+  color: #FFD23F;
+}
+
+.card-inner-2::before {
+  background-color: #FFD23F;
+  z-index: 1;
+  transition: all 0.4s;
+}
+
+.card-inner-3 {
+  color: #EE4266;
+}
+
+.card-inner-3::before {
+  background-color: #EE4266;
+  z-index: 1;
+  transition: all 0.4s;
+}
+
+.card-inner-4 {
+  color: #FBA834;
+}
+
+.card-inner-4::before {
+  background-color: #FBA834;
+  z-index: 1;
+  transition: all 0.4s;
+}
+
+.card-inner-5 {
+  color: #9195F6;
+}
+
+.card-inner-5::before {
+  background-color: #9195F6;
+  z-index: 1;
+  transition: all 0.4s;
+}
+
+.card-inner-6 {
+  color: #FC6736;
+}
+
+.card-inner-6::before {
+  background-color: #FC6736;
+  z-index: 1;
+  transition: all 0.4s;
+}
+
+.card-inner-7 {
+  color: #FF004D;
+}
+
+.card-inner-7::before {
+  background-color: #FF004D;
+  z-index: 1;
+  transition: all 0.4s;
+}
+
+.card-inner-8 {
+  color: #FF90BC;
+}
+
+.card-inner-8::before {
+  background-color: #FF90BC;
+  z-index: 1;
+  transition: all 0.4s;
+}
 
 
-.card-inner-1:hover::before{left: 0;}
-.card-inner-2:hover::before{left: 0;}
-.card-inner-3:hover::before{left: 0;}
-.card-inner-4:hover::before{left: 0;}
-.card-inner-5:hover::before{left: 0;}
-.card-inner-6:hover::before{left: 0;}
-.card-inner-7:hover::before{left: 0;}
-.card-inner-8:hover::before{left: 0;}
+.card-inner-1:hover::before {
+  left: 0;
+}
 
-.search-border{
+.card-inner-2:hover::before {
+  left: 0;
+}
+
+.card-inner-3:hover::before {
+  left: 0;
+}
+
+.card-inner-4:hover::before {
+  left: 0;
+}
+
+.card-inner-5:hover::before {
+  left: 0;
+}
+
+.card-inner-6:hover::before {
+  left: 0;
+}
+
+.card-inner-7:hover::before {
+  left: 0;
+}
+
+.card-inner-8:hover::before {
+  left: 0;
+}
+
+.search-border {
   border: 1px solid #000;
 }
