--- a/style.css
+++ b/style.css
@@ -76,6 +76,19 @@ body {
   border-radius: 50%;
   /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
   filter: drop-shadow(0 0 10px #00b7ff);
+  animation: updown infinite 2.5s linear;
+}
+
+@keyframes updown {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(-3%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
 }
 
 .right .box p {
@@ -114,9 +127,11 @@ body {
 .social-buttons {
   border-radius: 5px;
   display: flex;
+  height: auto;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 2rem;
+  padding: 0 30%;
 }
 
 .social-buttons__button {
@@ -150,6 +165,7 @@ body {
   border-radius: 100%;
   background: #fff;
   text-align: center;
+  box-shadow: 0 0 10px #0000007a;
 }
 
 .social-button i,
@@ -249,6 +265,14 @@ body {
   background: #08851b;
 }
 
+.social-button--discord {
+  color: #5562ea;
+}
+
+.social-button--discord::after {
+  background: #5562ea;
+}
+
 .social-button--apnaCollege {
   color: #891652;
 }
@@ -305,68 +329,13 @@ body {
   background: #1a5319;
 }
 
-/* search */
-.search {
-  width: 100%;
-  height: 10vh;
-  /* border: 1px solid red; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.search form {
-  width: 450px;
-  height: 50px;
-  border-radius: 60px;
-  display: flex;
-  overflow: hidden;
-  /* background-color: red; */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url(bg-search.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-form input {
-  width: 85%;
-  outline: none;
-  padding-left: 20px;
-  font-size: 1.2rem;
-  background-color: transparent;
-  border: none;
-  color: #fff;
-}
-
-::placeholder {
-  color: #ffffff;
-  opacity: 0.5;
-}
-
-form button {
-  width: 15%;
-  background-color: transparent;
-  outline: none;
-  border: none;
-  cursor: pointer;
-}
-
-form button i {
-  color: #ffffff;
-  font-size: 1.2rem;
-}
-
-/* search */
 .cards {
   width: 100%;
   height: 43vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 5%;
   padding: 1% 25% 1% 25%;
   /* border: 1px solid red; */
 }
